--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <amplify-authenticator>
   <div>
-    Restaurants App
+    Restaurants1 App
     <amplify-sign-out></amplify-sign-out>
   </div>
   <!-- previous code -->
