--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <amplify-authenticator>
   <div>
-    Restaurants1 App
+    {{appname}}
     <amplify-sign-out></amplify-sign-out>
   </div>
   <!-- previous code -->
